# performance-check

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: benchmark.rs  discover.rs  fixes.rs  lib.rs  main.rs  output.rs  supervisor.rs  types.rs
src/checks/: frankenphp.rs  go_runtime.rs  laravel.rs  libc.rs  mod.rs  mysql.rs  php.rs  redis.rs  system.rs
tests/: integration_frankenphp.rs  integration_mysql.rs  integration_redis.rs
