[package]
name = "frankenphp-check"
version = "0.1.0"
edition = "2021"
description = "FrankenPHP + Laravel/Flux Performance Checker"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
